# ChuanTaiTianYuan

./: CMakeLists.txt  ComposedCalculator_main.cpp  ComposedCalculator_main.h  LeastSquare_main.cpp  Least_Square.cpp  LinearEquations_main.cpp  LinearEquations_main.h  Matrix.h  MatrixIO.h  README.md  ReadMe.md  function.cpp  std_lib_facilities.h  variable.cpp  第一天报告.md
川太天元/exe/: README.txt
川太天元/release/: Makefile  Makefile.Debug  Makefile.Release  moc_choosefunction.cpp  moc_mainwindow.cpp  moc_signup.cpp  ui_choosefunction.h  ui_mainwindow.h  ui_signup.h  user.db
无GUI版本/: LeastSquare_main.h  Least_Square.h  Linear_Equations.cpp  Linear_Equations.h  MainProgramme.cpp  SimplexMethod_main.h  Simplex_Method.cpp  function.h  lexer.cpp  lexer.h  parser.cpp  parser.h  variable.h
